Mon Jun 13 09:09:56 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/MemLeakDetection/TypeRegistration/descriptors/Plan.cdp:
          Fixed runtime issue due to renaming action.

Sat Jun 11 08:18:19 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/TypeSupport/main.cpp:
          Fuzz: no ending new line at the end of the file.

Sat Jun 11 08:17:03 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/MemLeakDetection/TypeRegistration/Base/TypeRegistration_Test_Base.mpc:
        * connectors/dds4ccm/tests/MemLeakDetection/TypeRegistration/Component/TypeRegistration_Test_Component.mpc:
        * connectors/dds4ccm/tests/MemLeakDetection/TypeRegistration/Connector/TypeRegistration_Test_Connector.mpc:
          Fixed compile issues after renaming of project names.

Fri Jun 10 15:01:15 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * bin/ciao_tests.lst:
        * connectors/dds4ccm/tests/TypeSupport:
        * connectors/dds4ccm/tests/TypeSupport/TypeSupport.mpc:
        * connectors/dds4ccm/tests/TypeSupport/main.cpp:
        * connectors/dds4ccm/tests/TypeSupport/run_test.pl:
          Added a new (regular C++) which tests the TypeSupport class and its
          internal type factory administration.

Fri Jun 10 14:54:14 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/TypeSupport.h:
          Code alignment.

        * connectors/dds4ccm/impl/ndds/TypeSupport.cpp:
          Fuzz. Mismatched trace.

Fri Jun 10 14:48:01 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/MemLeakDetection/TypeRegistration/Base/TypeRegistration_Test_Base.mpc:
        * connectors/dds4ccm/tests/MemLeakDetection/TypeRegistration/Component/TypeRegistration_Test_Component.mpc:
        * connectors/dds4ccm/tests/MemLeakDetection/TypeRegistration/Connector/TypeRegistration_Test_Connector.mpc:
          Fuzz. Shorten project names
